--- a/contact.html
+++ b/contact.html
@@ -27,69 +27,21 @@
   </ul>
 </nav>
 
-<div class="main-container">
-  <div class="col-md-6 main-left">
-    <div class="col-md-12 index-images index-images-1 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_1.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
+<div class="contact-container">
+  <div class="row">
+    <div class="contact-content col-md-10 col-md-offset-1">
+      <p class="col-md-6">
+        Bonjour! <br><br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <br><br>
+        <strong>Joann P</strong><br>
+        <strong>P:</strong> 559.234-2345<br>
+        <strong>E:</strong> Joann@gmail.com
       </p>
     </div>
-
-    <div class="col-md-6 index-images index-images-2 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_2.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons. Lots of food to eat. Testing out super long paragraphs.
-      </p>
-    </div>
-
-    <div class="col-md-6 index-images index-images-3 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_3.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
-    </div>
-  </div>
-
-  <div class="col-md-6 main-right">
-    <h1 class="text-center">Latest Feeds</h1>
-    <div class="col-md-8 index-images index-images-4 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_2.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
-    </div>
-
-    <div class="col-md-6 index-images index-images-5 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_4.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
-    </div>
-
-    <div class="col-md-6 index-images index-images-1 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_5.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
-    </div>
-
   </div>
 </div>
 
-<div class="main-bg clearfix"></div>
 <footer class="container">
   <div class="col-md-6">
     <strong>J.P. Macarons</strong><br>
