--- a/menu.html
+++ b/menu.html
@@ -27,65 +27,59 @@
   </ul>
 </nav>
 
-<div class="main-container">
-  <div class="col-md-6 main-left">
-    <div class="col-md-12 index-images index-images-1 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_1.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
+<div class="container">
+  <br><br><h1 class="text-center">What's your flavor?</h1><br><br>
+  <div class="col-md-10 col-md-offset-1">
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_1.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Orange Cream</p>
+    </div>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_2.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Coconut Chucks</p>
+    </div>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_3.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Lavender Dream</p>
+    </div>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_4.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Lemon Pie</p>
     </div>
 
-    <div class="col-md-6 index-images index-images-2 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_2.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons. Lots of food to eat. Testing out super long paragraphs.
-      </p>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_3.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Plum Delite</p>
+    </div>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_4.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Banana Split</p>
+    </div>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_5.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Strawberry Cake</p>
+    </div>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_2.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Salt Caramel</p>
     </div>
 
-    <div class="col-md-6 index-images index-images-3 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_3.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_5.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Velvet Cake</p>
     </div>
-  </div>
-
-  <div class="col-md-6 main-right">
-    <h1 class="text-center">Latest Feeds</h1>
-    <div class="col-md-8 index-images index-images-4 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_2.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_3.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Passion Fruit</p>
     </div>
-
-    <div class="col-md-6 index-images index-images-5 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_4.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_1.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Peach Breeze</p>
     </div>
-
-    <div class="col-md-6 index-images index-images-1 fade-out">
-      <a href="#" class="index-images-link">
-        <img src="images/bg_5.jpg" alt="" class="img-responsive">
-      </a>
-      <p class="caption">
-        #JaiLao #Macarons Wonderful table display for macarons.
-      </p>
+    <div class="col-xs-6 col-sm-4 col-md-3">
+      <img src="images/mac_4.jpg" alt="" class="img-responsive" />
+      <p class="text-center">Lemon Drop</p>
     </div>
-
   </div>
 </div>
 
