--- a/catering.html
+++ b/catering.html
@@ -11,11 +11,11 @@
 <body>
 <nav class="nav-container text-center">
   <ul>
-    <li><a href="#">Menu</a></li>
+    <li><a href="menu.html">Menu</a></li>
     <li><a href="catering.html">Catering</a></li>
     <li class="logo"><span class="logo-bracket-left">{</span><a href="index.html">J.P.<br>Macarons</a><span class="logo-bracket-right">}</span></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
 
