--- a/about.html
+++ b/about.html
@@ -19,33 +19,45 @@
   </ul>
 </nav>
 
+<nav class="nav-container-mobile text-center">
+  <span class="logo"><span class="logo-bracket-left">{</span><a href="index.html">J.P.<br>Macarons</a><span class="logo-bracket-right">}</span></span>
+  <ul>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="catering.html">Catering</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 <div class="about-container">
-  <div class="container about-section">
-    <h1 class="text-center">A Baker's Story</h1>
-    <br><br>
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1 about-section">
+      <h1 class="text-center">A Baker's Story</h1>
+      <br><br>
 
-    <div class="col-md-6">
-      <img src="images/profile.jpg" alt="" class="img-responsive">
-    </div>
+      <div class="col-md-6">
+        <img src="images/profile.jpg" alt="" class="img-responsive">
+      </div>
 
-    <div class="col-md-6">
-    <p>
-    Carlo's Bakery, featured on Cake Boss, is known for our delicious pastries, desserts & cakes.
-    </p>
-    <p>
-    Carlo’s is a family owned bakery featured on the TLC hit show Cake Boss. Carlo’s, originally opened by Carlo Guastaffero in 1910, was acquired by Bartolo Valastro Sr. in 1964. Since the untimely passing of Bartolo Sr. in 1994, matriarch Mary Valastro and her children Grace, Maddalena, Mary, Lisa and master baker Bartolo Jr. “Buddy” Valastro have expanded the business with the help of their spouses.
-    Because of the Valastro family’s dedication to quality and excellence, Carlo’s has received national recognition. Master Baker Bartolo Jr. “Buddy” has been featured in numerous publications, such as Modern Bride, and The Knot. Buddy’s cake design was voted by the Today’s Show viewers as best cake in America. He has also appeared in many other media outlets, including multiple appearances on the Food Network, for his intricate sugar art designs specialty cakes and wedding cakes that look just as good as they taste.
-    </p>
-    <p>
-    Carlo’s Bakery is currently open in Uncasville, CT (Mohegan Sun); Orlando, FL; Hoboken, Marlton, Morristown, Red Bank, Ridgewood, and Westfield, NJ; Las Vegas, NV; New York, and Westbury, NY; Philadelphia, PA; and Dallas, TX.
-    </p>
+      <div class="col-md-6">
+      <p>
+      Carlo's Bakery, featured on Cake Boss, is known for our delicious pastries, desserts & cakes.
+      </p>
+      <p>
+      Carlo’s is a family owned bakery featured on the TLC hit show Cake Boss. Carlo’s, originally opened by Carlo Guastaffero in 1910, was acquired by Bartolo Valastro Sr. in 1964. Since the untimely passing of Bartolo Sr. in 1994, matriarch Mary Valastro and her children Grace, Maddalena, Mary, Lisa and master baker Bartolo Jr. “Buddy” Valastro have expanded the business with the help of their spouses.
+      Because of the Valastro family’s dedication to quality and excellence, Carlo’s has received national recognition. Master Baker Bartolo Jr. “Buddy” has been featured in numerous publications, such as Modern Bride, and The Knot. Buddy’s cake design was voted by the Today’s Show viewers as best cake in America. He has also appeared in many other media outlets, including multiple appearances on the Food Network, for his intricate sugar art designs specialty cakes and wedding cakes that look just as good as they taste.
+      </p>
+      <p>
+      Carlo’s Bakery is currently open in Uncasville, CT (Mohegan Sun); Orlando, FL; Hoboken, Marlton, Morristown, Red Bank, Ridgewood, and Westfield, NJ; Las Vegas, NV; New York, and Westbury, NY; Philadelphia, PA; and Dallas, TX.
+      </p>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="about-story-container">
   <div class="about-story-white"></div>
-  <div class="about-story col-md-5 col-md-offset-6 text-center">
+  <div class="about-story col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-6 text-center">
     <span class="grey">&ldquo;</span>Life is better with <span class="sweets">sweets</span> in it.<span class="grey">&rdquo;</span>
   </div>
 </div>
