--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,19 @@
   </ul>
 </nav>
 
+<nav class="nav-container-mobile text-center">
+  <span class="logo"><span class="logo-bracket-left">{</span><a href="index.html">J.P.<br>Macarons</a><span class="logo-bracket-right">}</span></span>
+  <ul>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="catering.html">Catering</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 <div class="contact-container">
   <div class="row">
-    <div class="contact-content col-md-10 col-md-offset-1">
+    <div class="contact-content col-xs-10 col-xs-offset-1">
       <p class="col-md-6">
         Bonjour! <br><br>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
