--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
   </ul>
 </nav>
 
+<nav class="nav-container-mobile text-center">
+  <span class="logo"><span class="logo-bracket-left">{</span><a href="index.html">J.P.<br>Macarons</a><span class="logo-bracket-right">}</span></span>
+  <ul>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="catering.html">Catering</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 <div class="main-container">
   <div class="col-md-6 main-left">
     <div class="col-md-12 index-images index-images-1 fade-out">
