--- a/menu.html
+++ b/menu.html
@@ -27,6 +27,16 @@
   </ul>
 </nav>
 
+<nav class="nav-container-mobile text-center">
+  <span class="logo"><span class="logo-bracket-left">{</span><a href="index.html">J.P.<br>Macarons</a><span class="logo-bracket-right">}</span></span>
+  <ul>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="catering.html">Catering</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 <div class="container">
   <br><br><h1 class="text-center">What's your flavor?</h1><br><br>
   <div class="col-md-10 col-md-offset-1">
